<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App constants -->
    <string name="app_name">Work Tracker</string>
    <string name="permission_database_access">WorkTracker database access</string>
    <string name="permission_database_access_description">Access data in the WorkTracker database</string>
    <string name="permission_receive_broadcast">Receive WorkTracker broadcasts</string>
    <string name="permission_receive_broadcast_description">Receive internal WorkTracker broadcasts</string>
    
    <!-- Common -->
    <string name="search">Search</string>
    <string name="save">Save</string>    
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="sort_by">Sort By</string>
        
    <!-- Dashboard -->
    <string name="dashboard_title">@string/app_name</string>
    <string name="btn_dashboard_new_list">New List</string>
    <string name="btn_dashboard_new_item">New List Item</string>
    <string name="btn_dashboard_previous_lists">Previous Lists</string>
    <string name="btn_dashboard_settings">Settings</string>
    <string name="btn_dashboard_previous_items">Saved Items</string>
    
    <!-- New Item -->
    <string name="new_item_title">New Item</string>
    <string name="item_details_section_title">Item Details</string>
    <string name="item_details_name">Item Name</string>
    <string name="item_details_description">Item Description (Optional)</string>
    <string name="item_details_label_price">Item Price (Optional)</string>
    <string name="item_image_section_title">Item Images</string>
    <string name="item_image_label">Add optional images of your item</string>
    <string name="btn_add_new_image">Add Image</string>
    <string name="delete_item">Delete Item</string>
    <string name="item_delete_message">Your item will be permanently removed.</string>
    <string name="changed_data">Unsaved Changes</string>
    <string name="changed_data_message">You will lose any changes you\'ve made</string>
        
    <!-- Item list -->
    <string name="item_list_title">Saved Items</string>
    <string name="add_item">Add item</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="search_items">Search Items</string>
    <string name="search_items_hint">Search by name or description</string>
    
	<!-- Edit List -->
    <string name="edit_list_title">Item List</string>
    <string name="add_new_item_title">Add To List</string>
    <string name="item_code">Item Code</string>
    <string name="item_name">Item Name</string>
    <string name="item_completion_hint">Type an item name</string>
    <string name="item_description">Description (optional)</string>
    <string name="item_price">Price</string>
    <string name="item_quantity">Quantity</string>
    <string name="saved_item_list_title">Saved Items</string>
    <string name="add_item_tab">Add Item</string>
    <string name="item_list_tab">Current Items</string>
    <string name="add_item_from_list">Add Item</string>
    <string name="populate_from_saved_items_btn">Get From Saved Item</string>
        
    <!-- Previous List -->
    <string name="previous_list_title">Previous Lists</string>
    
</resources>